--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,11 +20,11 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=lflorez@cidenet.com.co
-spring.mail.password=dmmwpmspjvemxdzz
+spring.mail.username=prueba.cidenet@gmail.com
+spring.mail.password=wmiaygidnhdgdjgo
 
 security.app.jwtSecret=sdf94k4===============Cidenet23Secure==================u57djsoyy
 security.app.jwtExpirationMs= 28800000
-spring.security.user.password=abc123
-spring.security.user.name=cidenet
+#cron todos los dias a las 12.01 am
+cron.job.schedule = 0 1 12 * * *
 
