--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.14.2</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.supercsv</groupId>
+            <artifactId>super-csv</artifactId>
+            <version>2.4.0</version>
+        </dependency>
 
     </dependencies>
 
